--- a/index.html
+++ b/index.html
@@ -8,10 +8,388 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
 
 </head>
 
 <body>
+    <main>
+        <section class="header">
+            <div class="container-fluid">
+                <h6 class="font-weight-lighter text-center px-3 py-3">Free Shipping Over ‎₦ 7,000 + 3 Free Samples With
+                    Every Order</h6>
+            </div>
+        </section>
+
+        <section class="main">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-4"></div>
+                    <div class="col-4 pt-2">
+                        <h1 class="font-weight-light">Nude</h1>
+                    </div>
+                    <div class="col-4  pt-3"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></div>
+
+                    <!-- NAVBAR -->
+                    <div class="col-4 mx-auto">
+                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top">
+                            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+                                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 pr-sm-2">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                                    </li>
+
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
+                                        <div class="dropdown-menu text-center" aria-labelledby="dropdownId">
+                                            <a class="dropdown-item" href="#">Action 1</a>
+                                            <a class="dropdown-item" href="#">Action 2</a>
+                                        </div>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">PRESS</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">ABOUT</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACT</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+                <!-- Image Slider -->
+                <div class="row mb-5">
+                    <!--Carousel Wrapper-->
+                    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                        <!--Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                        </ol>
+                        <!--/.Indicators-->
+                        <!--Slides-->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <div class="view">
+                                    <img class="d-block w-100" src="img/carousel1.webp" alt="First slide">
+                                    <div class="mask rgba-black-light"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">DISCOVER YOUR NEW ADDICTION</h3>
+                                    <p>Mineral Based Makeup Products</p>
+
+                                    <button class="btn shop-btn text-white mt-5"> Shop Now</button>
+
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view">
+                                    <img class="d-block w-100" src="img/carousel2.webp" alt="Second slide">
+                                    <div class="mask rgba-black-strong"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">DISCOVER YOUR NEW ADDICTION</h3>
+                                    <p>Mineral Based Makeup Products</p>
+
+                                    <button class="btn shop-btn text-white mt-5"> Shop Now</button>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view">
+                                    <img class="d-block w-100" src="img/carousel3.webp" alt="Third slide">
+                                    <div class="mask rgba-black-slight"></div>
+                                </div>
+                                <div class="carousel-caption text-dark">
+                                    <h3 class="h3-responsive">DISCOVER YOUR NEW ADDICTION</h3>
+                                    <p>Mineral Based Makeup Products</p>
+                                    <button class="btn shop-btn text-white mt-5"> Shop Now</button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <!--/.Controls-->
+                </div>
+                <!--/.Carousel Wrapper-->
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="div-1 pt-5 text-center">
+                            <h4 class="text-white display-5 text-center pt-5">SEASONAL ESSENTIALS</h4>
+                            <p class="text-white display-5 text-center pt-3">Must Have Moisturizing Skin Care</p>
+                            <button class="btn shop-btn text-white mt-5">Shop Now <i
+                                    class="fa fa-arrow-right    "></i></button>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="div-2 text-center text-white pt-5">
+                            <h3 class="pt-5 font-weight-lighter">START FRESH</h3>
+                            <p class="pt-3">New Foundation Shades for all Skintones</p>
+                            <button class="btn shop-btn text-white mt-4">Shop Now <i
+                                    class="fa fa-arrow-right    "></i></button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!-- cards -->
+            <div class="container">
+                <div class="row my-5">
+                    <!-- Card 1 -->
+                    <div class="col-md-4 card-container">
+                        <div class="card-flip">
+                            <!-- Card 1 Front -->
+                            <div class="card front">
+                                <img src="/img/blush-2.webp" class="card-img-top img-fluid">
+                                <div class="card-block p-3">
+                                    <h5 class="card-title text-left text-muted font-weight-lighter">Satin Blush Powder
+                                    </h5>
+                                    <p class="card-text">$20.00</p>
+                                </div>
+                            </div>
+                            <!-- End Card 1 Front -->
+
+                            <!-- Card 1 Back -->
+                            <div class="card back">
+                                <img src="/img/blush22.webp" alt="" class="img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Product Details</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">Satin Blush Powder</h6>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <button class="btn shop-btn text-white mt-4">Shop Now <i
+                                        class="fa fa-arrow-right    "></i></button>
+                                </div>
+                            </div>
+                            <!-- End Card 1 Back -->
+                        </div>
+                    </div>
+                    <!-- End Card 1 -->
+
+                    <!-- Card 2 -->
+                    <div class="col-md-4 card-container">
+                        <div class="card-flip">
+                            <!-- Card 2 Front -->
+                            <div class="card front">
+                                <img src="/img/lipstic1.webp" class="card-img-top img-fluid">
+                                <div class="card-block p-3">
+                                    <h4 class="card-title text-left text-muted font-weight-lighter">Lip Stain</h4>
+                                    <p class="card-text">$13.00</p>
+                                    <p class="card-text"><small class="text-muted">See More</small></p>
+                                </div>
+                            </div>
+                            <!-- End Card 2 Front -->
+
+                            <!-- Card 2 Back -->
+                            <div class="card back">
+                                <img src="/img/lip-stain.webp" alt="" class="img-fluid">
+
+                                <div class="card-block">
+                                    <h4 class="card-title">Product Details</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">Lip Stain</h6>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <button class="btn shop-btn text-white mt-4">Shop Now <i
+                                        class="fa fa-arrow-right    "></i></button>
+                                </div>
+                            </div>
+                            <!-- End Card 2 Back -->
+                        </div>
+                    </div>
+                    <!-- End Card 2 -->
+
+                    <!-- Card 3 -->
+                    <div class="col-md-4 card-container">
+                        <div class="card-flip">
+                            <!-- Card 3 Front -->
+                            <div class="card front">
+                                <img src="/img/eyeshadow.webp" class="card-img-top img-fluid">
+                                <div class="card-block p-3">
+                                    <h4 class="card-title text-left text-muted font-weight-lighter">Eye Shadow</h4>
+                                    <p class="card-text">$13.00</p>
+                                    <p class="card-text"><small class="text-muted">See More</small></p>
+                                </div>
+                            </div>
+
+
+                            <!-- Card 3 Back -->
+                            <div class="card back">
+                                <img src="/img/eye-shadow2.webp" alt="" class="img-fluid">
+
+                                <div class="card-block">
+                                    <h4 class="card-title">Product Details</h4>
+                                    <h6 class="card-subtitle mb-2 text-muted">Eye Shadow</h6>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <button class="btn shop-btn text-white mt-4">Shop Now <i
+                                        class="fa fa-arrow-right    "></i></button>
+                                </div>
+                            </div>
+                            <!-- End Card 3 Back -->
+                        </div>
+                    </div>
+                    <!-- End Card 3 -->
+
+                </div>
+
+                <!-- blog section -->
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="div-3 text-white text-center pt-5 font-weight-lighter">
+                            <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
+                            <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
+
+                                <button class="btn shop-btn text-white mt-5"> Order Now <i
+                                        class="fa fa-arrow-right    "></i></button>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="div-4 text-secondary text-center pt-5">
+                            <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
+                            <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
+
+                                <button class="btn shop-btn text-white mt-5">Order Now <i
+                                        class="fa fa-arrow-right    "></i></button>
+                        </div>
+                    </div>
+                </div>
+
+            <!-- Instagram  -->
+
+                <div class="row my-5 text-center">
+                    <div class="col-md-12 ">
+                        <h2 class="font-weight-lighter"> # Join the Nude Makeup Community</h2>
+                    </div>
+                </div>
+
+                <div class="row mb-4">
+                   <div class="col-md-2">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
+                   </div>
+                   <div class="col-md-2">
+                    <img src="/img/girl-2.jpg" alt="" class="img-fluid">
+                   </div>
+                   <div class="col-md-2">
+                    <img src="/img/naturw.jpg" alt="" class="img-fluid">
+                   </div>
+                   <div class="col-md-2">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
+                   </div>
+                   <div class="col-md-2">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
+                   </div>
+                   <div class="col-md-2">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
+                   </div>
+                </div>
+
+                <div class="row mb-4">
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-2">
+                     <img src="/img/creams.jpg" alt="" class="img-fluid">
+                    </div>
+                 </div>
+            </div>
+
+        </section>
+    </main>
+
+    <hr class="my-5">
+    <footer>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>JOIN OUR NEWSLETTER <sup>*</sup></h5>
+                    <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" class="form-control" placeholder="Enter your email here" id="email">
+                      </div>
+                        <button class="btn bg-dark text-white t=font-weight-lighter mt-3 text-center px-5 py-3 w-100"> Subscribe Now</button>
+                </div>
+                <div class="col-md-6">
+                    <div class="row text-center pt-3">
+                        <div class="col-md-4">Stockists</div>
+                        <div class="col-md-4">About</div>
+                        <div class="col-md-4">Contact</div>
+                    </div>
+                    <div class="row text-center pt-3">
+                        <div class="col-md-4">FAQ</div>
+                        <div class="col-md-4">Shipping & Returns</div>
+                        <div class="col-md-4">Store Policy</div>
+                    </div>
+                    <div class="row text-center pt-3">
+                        <div class="col-md-4">FaceBook</div>
+                        <div class="col-md-4">Instagram</div>
+                        <div class="col-md-4">Pinterest</div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
