--- a/src/header.html
+++ b/src/header.html
@@ -34,7 +34,7 @@
 
                     <!-- NAVBAR -->
                     <div class="col-4 mx-auto">
-                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top">
+                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top fixed-top">
                             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -43,24 +43,25 @@
                             <div class="collapse navbar-collapse" id="collapsibleNavId">
                                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 pr-sm-2">
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                                        <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
                                     </li>
 
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
                                         <div class="dropdown-menu text-center" aria-labelledby="dropdownId">
-                                            <a class="dropdown-item" href="#">Action 1</a>
-                                            <a class="dropdown-item" href="#">Action 2</a>
+                                            <a class="dropdown-item" href="#">Eyes</a>
+                                            <a class="dropdown-item" href="#">Lips</a>
+                                            <a class="dropdown-item" href="#">Face</a>
                                         </div>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">PRESS</a>
+                                        <a class="nav-link" href="/src/press.html">PRESS</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">ABOUT</a>
+                                        <a class="nav-link" href="/src/about.html">ABOUT</a>
                                     </li>
 
                                     <li class="nav-item">
