--- a/src/header.html
+++ b/src/header.html
@@ -88,19 +88,19 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">Stockists</div>
-                        <div class="col-md-4">About</div>
-                        <div class="col-md-4">Contact</div>
+                        <div class="col-md-4 col-4 mt-4">Stockists</div>
+                        <div class="col-md-4 col-4 mt-4">About</div>
+                        <div class="col-md-4 col-4 mt-4">Contact</div>
                     </div>
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">FAQ</div>
-                        <div class="col-md-4">Shipping & Returns</div>
-                        <div class="col-md-4">Store Policy</div>
+                        <div class="col-md-4 col-4 mt-2">FAQ</div>
+                        <div class="col-md-4 col-4 mt-2">Shipping & Returns</div>
+                        <div class="col-md-4 col-4 mt-2">Store Policy</div>
                     </div>
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">FaceBook</div>
-                        <div class="col-md-4">Instagram</div>
-                        <div class="col-md-4">Pinterest</div>
+                        <div class="col-md-4 col-4 mt-2">FaceBook</div>
+                        <div class="col-md-4 col-4 mt-2">Instagram</div>
+                        <div class="col-md-4 col-4 mt-2">Pinterest</div>
                     </div>
 
                 </div>
