--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/header.css">
 
 </head>
 
@@ -18,7 +19,7 @@
     <main>
         <section class="header">
             <div class="container-fluid">
-                <h6 class="font-weight-lighter text-center px-3 py-3">Free Shipping Over ‎₦ 7,000 + 3 Free Samples With
+                <h6 class="font-weight-lighter text-center px-3 py-3">Free Shipping Over ‎$70 + 3 Free Samples With
                     Every Order</h6>
             </div>
         </section>
@@ -30,11 +31,12 @@
                     <div class="col-4 pt-2">
                         <h1 class="font-weight-light">Nude</h1>
                     </div>
-                    <div class="col-4  pt-3"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></div>
+                    <div class="col-4  pt-3"></div>
 
+                  
                     <!-- NAVBAR -->
                     <div class="col-4 mx-auto">
-                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top">
+                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top fixed-top">
                             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
                                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -43,24 +45,25 @@
                             <div class="collapse navbar-collapse" id="collapsibleNavId">
                                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 pr-sm-2">
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                                        <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
                                     </li>
 
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
                                         <div class="dropdown-menu text-center" aria-labelledby="dropdownId">
-                                            <a class="dropdown-item" href="#">Action 1</a>
-                                            <a class="dropdown-item" href="#">Action 2</a>
+                                            <a class="dropdown-item" href="#">Eyes</a>
+                                            <a class="dropdown-item" href="#">Lips</a>
+                                            <a class="dropdown-item" href="#">Face</a>
                                         </div>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">PRESS</a>
+                                        <a class="nav-link" href="/src/press.html">PRESS</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">ABOUT</a>
+                                        <a class="nav-link" href="/src/about.html">ABOUT</a>
                                     </li>
 
                                     <li class="nav-item">
@@ -71,6 +74,7 @@
                         </nav>
                     </div>
                 </div>
+            </header>
                 <!-- Image Slider -->
                 <div class="row mb-5">
                     <!--Carousel Wrapper-->
@@ -139,6 +143,9 @@
                 </div>
                 <!--/.Carousel Wrapper-->
             </div>
+        </section>
+
+        <section>
 
             <div class="container">
                 <div class="row">
@@ -162,8 +169,9 @@
 
                 </div>
             </div>
+        </section>
 
-
+        <section>
             <!-- cards -->
             <div class="container">
                 <div class="row my-5">
@@ -187,9 +195,10 @@
                                 <div class="card-block">
                                     <h4 class="card-title">Product Details</h4>
                                     <h6 class="card-subtitle mb-2 text-muted">Satin Blush Powder</h6>
-                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                        Optio, sunt.</p>
                                     <button class="btn shop-btn text-white mt-4">Shop Now <i
-                                        class="fa fa-arrow-right    "></i></button>
+                                            class="fa fa-arrow-right    "></i></button>
                                 </div>
                             </div>
                             <!-- End Card 1 Back -->
@@ -199,6 +208,7 @@
 
                     <!-- Card 2 -->
                     <div class="col-md-4 card-container">
+                        
                         <div class="card-flip">
                             <!-- Card 2 Front -->
                             <div class="card front">
@@ -218,9 +228,10 @@
                                 <div class="card-block">
                                     <h4 class="card-title">Product Details</h4>
                                     <h6 class="card-subtitle mb-2 text-muted">Lip Stain</h6>
-                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                        Optio, sunt.</p>
                                     <button class="btn shop-btn text-white mt-4">Shop Now <i
-                                        class="fa fa-arrow-right    "></i></button>
+                                            class="fa fa-arrow-right    "></i></button>
                                 </div>
                             </div>
                             <!-- End Card 2 Back -->
@@ -249,9 +260,10 @@
                                 <div class="card-block">
                                     <h4 class="card-title">Product Details</h4>
                                     <h6 class="card-subtitle mb-2 text-muted">Eye Shadow</h6>
-                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sunt.</p>
+                                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                        Optio, sunt.</p>
                                     <button class="btn shop-btn text-white mt-4">Shop Now <i
-                                        class="fa fa-arrow-right    "></i></button>
+                                            class="fa fa-arrow-right    "></i></button>
                                 </div>
                             </div>
                             <!-- End Card 3 Back -->
@@ -261,79 +273,60 @@
 
                 </div>
 
-                <!-- blog section -->
+        </section>
 
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="div-3 text-white text-center pt-5 font-weight-lighter">
-                            <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
-                            <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
+        <!-- blog section -->
+        <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="div-3 text-white text-center pt-5 font-weight-lighter">
+                    <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
+                    <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
 
-                                <button class="btn shop-btn text-white mt-5"> Order Now <i
-                                        class="fa fa-arrow-right    "></i></button>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="div-4 text-secondary text-center pt-5">
-                            <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
-                            <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
-
-                                <button class="btn shop-btn text-white mt-5">Order Now <i
-                                        class="fa fa-arrow-right    "></i></button>
-                        </div>
-                    </div>
+                        <button class="btn shop-btn text-white mt-5"> Order Now <i
+                                class="fa fa-arrow-right    "></i></button>
                 </div>
-
-            <!-- Instagram  -->
-
-                <div class="row my-5 text-center">
-                    <div class="col-md-12 ">
-                        <h2 class="font-weight-lighter"> # Join the Nude Makeup Community</h2>
-                    </div>
-                </div>
-
-                <div class="row mb-4">
-                   <div class="col-md-2">
-                    <img src="/img/creams.jpg" alt="" class="img-fluid">
-                   </div>
-                   <div class="col-md-2">
-                    <img src="/img/girl-2.jpg" alt="" class="img-fluid">
-                   </div>
-                   <div class="col-md-2">
-                    <img src="/img/naturw.jpg" alt="" class="img-fluid">
-                   </div>
-                   <div class="col-md-2">
-                    <img src="/img/creams.jpg" alt="" class="img-fluid">
-                   </div>
-                   <div class="col-md-2">
-                    <img src="/img/creams.jpg" alt="" class="img-fluid">
-                   </div>
-                   <div class="col-md-2">
-                    <img src="/img/creams.jpg" alt="" class="img-fluid">
-                   </div>
-                </div>
-
-                <div class="row mb-4">
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-2">
-                     <img src="/img/creams.jpg" alt="" class="img-fluid">
-                    </div>
-                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="div-4 text-secondary text-center pt-5">
+                    <h3 class="pt-5 font-weight-lighter">PICK UP YOUR MAKEUP</h3>
+                    <h4 class="pt-5 font-weight-lighter">New Service - Collect in Store </h3>
+
+                        <button class="btn shop-btn text-white mt-5">Order Now <i
+                                class="fa fa-arrow-right    "></i></button>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <!-- Instagram  -->
+
+        <div class="row my-5 text-center">
+            <div class="col-md-12 ">
+                <h2 class="font-weight-lighter"> # Join the Nude Makeup Community</h2>
+            </div>
+        </div>
+
+        <div class="row mb-4">
+            <div class="col-md-2">
+                <img src="/img/creams.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-2">
+                <img src="/img/girl-2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-2">
+                <img src="/img/naturw.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-2">
+                <img src="/img/creams.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-2">
+                <img src="/img/creams.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-2">
+                <img src="/img/creams.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
 
         </section>
     </main>
@@ -347,24 +340,25 @@
                     <div class="form-group">
                         <label for="email">Email address:</label>
                         <input type="email" class="form-control" placeholder="Enter your email here" id="email">
-                      </div>
-                        <button class="btn bg-dark text-white t=font-weight-lighter mt-3 text-center px-5 py-3 w-100"> Subscribe Now</button>
+                    </div>
+                    <button class="btn bg-dark text-white t=font-weight-lighter mt-3 text-center px-5 py-3 w-100">
+                        Subscribe Now</button>
                 </div>
                 <div class="col-md-6">
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">Stockists</div>
-                        <div class="col-md-4">About</div>
-                        <div class="col-md-4">Contact</div>
+                        <div class="col-md-4 col-4 mt-4">Stockists</div>
+                        <div class="col-md-4 col-4 mt-4">About</div>
+                        <div class="col-md-4 col-4 mt-4">Contact</div>
                     </div>
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">FAQ</div>
-                        <div class="col-md-4">Shipping & Returns</div>
-                        <div class="col-md-4">Store Policy</div>
+                        <div class="col-md-4 col-4 mt-2">FAQ</div>
+                        <div class="col-md-4 col-4 mt-2">Shipping & Returns</div>
+                        <div class="col-md-4 col-4 mt-2">Store Policy</div>
                     </div>
                     <div class="row text-center pt-3">
-                        <div class="col-md-4">FaceBook</div>
-                        <div class="col-md-4">Instagram</div>
-                        <div class="col-md-4">Pinterest</div>
+                        <div class="col-md-4 col-4 mt-2">FaceBook</div>
+                        <div class="col-md-4 col-4 mt-2">Instagram</div>
+                        <div class="col-md-4 col-4 mt-2">Pinterest</div>
                     </div>
 
                 </div>
@@ -372,25 +366,6 @@
         </div>
 
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
