made changes to the header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nude</title>
+    <title>Nude Beauty</title>
 
+        <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +36,8 @@
                             </div>
                 </div>
 
-                    <nav class="navbar navbar-expand-sm navbar-light ">
+                <div class="container">
+                    <nav class="navbar navbar-expand-sm navbar-light">
                         <a class="navbar-brand d-sm-block d-md-none" href="#">
                             <h1 class="font-weight-light">Nude</h1>
                         </a>
@@ -66,7 +68,7 @@
                                     <a class="nav-link" href="/src/press.html">PRESS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">CONTACT</a>
+                                    <a class="nav-link" href="/src/shop-pages/contact-page.html">CONTACT</a>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0">
@@ -78,6 +80,7 @@
                         </div>
                     </nav>
                 </div>
+
             </header>
         </section>
 
@@ -158,8 +161,8 @@
         </section>
 
         <!-- Season Essential -->
-        <section>
-            <div class="container mx-auto">
+        <section class="mt-5">
+            <div class="container mx-auto mt-5">
                 <div class="row mx-auto mb-5">
                     <div class="col-md-6 my-4">
                         <div class="div-1 pt-5 text-center">
@@ -185,7 +188,7 @@
         <!-- Product Display -->
         <section>
             <!-- cards -->
-            <div class="container mb-3">
+            <div class="container">
                 <div class="row">
                     <!-- Card 1 -->
                     <div class="col-md-4 card-container ">
@@ -197,6 +200,7 @@
                                     <h5 class="card-title text-left text-muted font-weight-lighter">Satin Blush Powder
                                     </h5>
                                     <p class="card-text">$20.00</p>
+                                    <p class="card-text"><small class="text-muted">See More</small></p>
                                 </div>
                             </div>
                             <!-- End Card 1 Front -->
