fixed all broken links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                                         <a class="dropdown-item" href="src/shop-pages/main-shop.html">EYES</a>
                                         <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
-                                        <a class="dropdown-item" href="#">FACE</a>
+                                        <a class="dropdown-item" href="/src/shop-pages/shop-face.html">FACE</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
