--- a/src/shop-pages/shop-face.html
+++ b/src/shop-pages/shop-face.html
@@ -27,54 +27,57 @@
         <header>
             <div class="container">
                 <div class="row text-center  d-none d-md-block mx-auto">
-                    <div class="col-12 pt-2 mx-auto text-center">
-                        <h1 class="font-weight-light">Nude</h1>
-                    </div>
-                </div>
+                            <div class="col-12 pt-2 mx-auto text-center">
+                                <h1 class="font-weight-light">Nude</h1>
+                            </div>
+                        </div>
             </div>
 
-            <nav class="navbar navbar-expand-sm navbar-light ">
-                <a class="navbar-brand d-sm-block d-md-none" href="#">
-                    <h1 class="font-weight-light">Nude</h1>
-                </a>
-                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                    data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav mx-auto mt-2 mt-lg-0 mx-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/index.html">HOME<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">SHOP</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="/src/shop-pages/main-shop.html">EYES</a>
-                                <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
-                                <a class="dropdown-item" href="#">FACE</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/src/about.html">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/src/press.html">PRESS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <a class="nav-link text-decoration-none text-dark" href="#"><i class="fa fa-shopping-bag"
-                                aria-hidden="true"></i></a>
-                        <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <div class="container">
+                <nav class="navbar navbar-expand-sm navbar-light">
+                    <a class="navbar-brand d-sm-block d-md-none" href="#">
+                        <h1 class="font-weight-light">Nude</h1>
+                    </a>
+                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+                        data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavId">
+                        <ul class="navbar-nav mx-auto mt-2 mt-lg-0 mx-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/index.html">HOME<span
+                                        class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle active-link" href="#" id="dropdownId" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">SHOP</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                                    <a class="dropdown-item" href="src/shop-pages/main-shop.html">EYES</a>
+                                    <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
+                                    <a class="dropdown-item" href="/src/shop-pages/shop-face.html">FACE</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/src/about.html">ABOUT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/src/press.html">PRESS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/src/shop-pages/contact-page.html">CONTACT</a>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <a class="nav-link text-decoration-none text-dark" href="#"><i
+                                    class="fa fa-shopping-bag pr-5" aria-hidden="true"></i></a>
+                            <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search">
                                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-                    </form>
-                </div>
-            </nav>
+                        </form>
+                    </div>
+                </nav>
             </div>
+
         </header>
         <main>
             <div class="container  mt-5">
