--- a/src/shop-pages/contact-page.html
+++ b/src/shop-pages/contact-page.html
@@ -49,8 +49,7 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavId">
                             <ul class="navbar-nav mx-auto mt-2 mt-lg-0 mx-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/index.html">HOME<span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="/index.html">HOME</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
@@ -58,7 +57,7 @@
                                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                                         <a class="dropdown-item" href="/src/shop-pages/main-shop.html">EYES</a>
                                         <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
-                                        <a class="dropdown-item" href="#">FACE</a>
+                                        <a class="dropdown-item" href="/src/shop-pages/shop-face.html">FACE</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -96,7 +95,6 @@
     <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
 
     <!-- Subject -->
-    <label>Subject</label>
     <select class="browser-default custom-select mb-4">
         <option value="" disabled>Choose option</option>
         <option value="1" selected>Feedback</option>
@@ -110,13 +108,13 @@
     </div>
 
     <!-- Copy -->
-    <div class="custom-control custom-checkbox mb-4">
+    <div class="custom-control custom-checkbox mb-3 py-2">
         <input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
         <label class="custom-control-label" for="defaultContactFormCopy">Send me a copy of this message</label>
     </div>
 
     <!-- Send button -->
-    <button class="btn form-btn btn-block" type="submit">Send</button>
+    <button class="btn form-btn btn-block py-2" type="submit">Send</button>
 
 </form>
 <!-- Default form contact -->
