fixed a broken link

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <div class="container">
             <div class="row my-5 text-center ">
                 <div class="col-md-12 ">
-                    <h2 class="font-weight-lighter"> # Join the Nude Makeup Community</h2>
+                    <h2 class="font-weight-lighter"><a class="insta-link" href="https://www.instagram.com/"># Join the Nude Makeup Community</a></h2>
                 </div>
             </div>
 
@@ -329,10 +329,10 @@
                     <img src="/img/creams.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-md-2">
-                    <img src="/img/girl-2.jpg" alt="" class="img-fluid">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-md-2">
-                    <img src="/img/naturw.jpg" alt="" class="img-fluid">
+                    <img src="/img/creams.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-md-2">
                     <img src="/img/creams.jpg" alt="" class="img-fluid">
